카톡에 올라온 수정 내역 적용한 수정본

--- a/hotel-web/src/assets/css/support/hotelsupport.css
+++ b/hotel-web/src/assets/css/support/hotelsupport.css
@@ -200,6 +200,9 @@
     cursor: pointer;
     transition: background-color 0.2s;
 }
+.submit-btn.secondary {
+    margin-top: 10px;
+}
 .submit-btn:hover {
     background-color: #41b38f;
 }
@@ -426,6 +429,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 2; /* 2줄까지 표시 */
   -webkit-box-orient: vertical;
+    line-clamp: 2;
 }
 
 .inquiry-card-item .item-date {
